assignment/src/main/java/com/example/assignment/error/exception/BusinessException.java
package com.example.assignment.error.exception;

import com.example.assignment.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;
}
